container and free load qty